production-datgabase-yml

--- a/config/database.yml
+++ b/config/database.yml
@@ -51,5 +51,6 @@ test:
 production:
   <<: *default
   database: y-chari_production
-  username: 
-  password: 
+  username: root
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock 
