--- a/config/storage.yml
+++ b/config/storage.yml
@@ -9,9 +9,9 @@ local:
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 amazon:
   service: S3
-#   access_key_id: <%= Rails.application.credentials.dig(:aws, :access_key_id) %>
-#   secret_access_key: <%= Rails.application.credentials.dig(:aws, :secret_access_key) %>
-  region: us-east-1
+  access_key_id: <%= ENV['ACSSES_KEY'] %>
+  secret_access_key: <%= ENV['SECRET_KEY'] %>
+  region: ap-northeast-1
   bucket: yourchari
 
 # Remember not to checkin your GCS keyfile to a repository
